syntax = "proto3";

option go_package = "a.yandex-team.ru/antirobot/captcha_cloud_api/proto;captcha_pb";

package yandex.cloud.priv.smartcaptcha.v1;

import "yandex/cloud/priv/smartcaptcha/v1/captcha.proto";
import "yandex/cloud/priv/smartcaptcha/v1/captcha_service.proto";
import "yandex/cloud/priv/smartcaptcha/v1/stats.proto";
import "yandex/cloud/priv/smartcaptcha/v1/stats_service.proto";
import "yandex/cloud/priv/smartcaptcha/v1/operation_service.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/quota/quota.proto";
import "google/protobuf/empty.proto";
import "google/rpc/status.proto";


message TError {
    google.rpc.Status error = 1;
    string file_line = 2;
}

message TCaptchaServerCreateRecord {
    TError error = 1;
    CreateCaptchaRequest request = 2;
    operation.Operation response = 3;
}

message TCaptchaServerDeleteRecord {
    TError error = 1;
    DeleteCaptchaRequest request = 2;
    operation.Operation response = 3;
}

message TCaptchaServerUpdateRecord {
    TError error = 1;
    UpdateCaptchaRequest request = 2;
    operation.Operation response = 3;
}

message TCaptchaServerUpdateAllRecord {
    TError error = 1;
    UpdateAllCaptchaRequest request = 2;
    operation.Operation response = 3;
}

message TCaptchaServerListRecord {
    TError error = 1;
    ListCaptchasRequest request = 2;
    ListCaptchasResponse response = 3;
}

message TCaptchaServerGetRecord {
    TError error = 1;
    GetSettingsRequest request = 2;
    CaptchaSettings response = 3;
}

message TCaptchaServerGetByClientKeyRecord {
    TError error = 1;
    GetSettingsByClientKeyRequest request = 2;
    CaptchaSettings response = 3;
}

message TCaptchaServerGetByServerKeyRecord {
    TError error = 1;
    GetSettingsByServerKeyRequest request = 2;
    CaptchaSettings response = 3;
}

message TQuotaServerGetDefaultRecord {
    TError error = 1;
    quota.GetQuotaDefaultRequest request = 2;
    quota.GetQuotaDefaultResponse response = 3;
}

message TQuotaServerGetRecord {
    TError error = 1;
    quota.GetQuotaRequest request = 2;
    quota.Quota response = 3;
}

message TQuotaServerUpdateMetricRecord {
    TError error = 1;
    quota.UpdateQuotaMetricRequest request = 2;
    google.protobuf.Empty response = 3;
}

message TQuotaServerBatchUpdateMetricRecord {
    TError error = 1;
    quota.BatchUpdateQuotaMetricsRequest request = 2;
    google.protobuf.Empty response = 3;
}

message TStatsServerFolderRecord {
    TError error = 1;
    GetFolderStatsRequest request = 2;
    FolderStats response = 3;
}

message TOperationServerGetRecord {
    TError error = 1;
    GetOperationRequest request = 2;
    operation.Operation response = 3;
}

message TOperationServerListRecord {
    TError error = 1;
    ListOperationsRequest request = 2;
    ListOperationsResponse response = 3;
}

message TGeneralMessage {
    uint32 level = 1;
    string message = 2;
}

message TLogRecord {
    // Only one of these is set for a single TLogRecord.
    TCaptchaServerCreateRecord captcha_server_create_record = 1;
    TCaptchaServerDeleteRecord captcha_server_delete_record = 2;
    TCaptchaServerUpdateRecord captcha_server_update_record = 3;
    TCaptchaServerListRecord captcha_server_list_record = 4;
    TCaptchaServerGetRecord captcha_server_get_record = 5;
    TCaptchaServerGetByClientKeyRecord captcha_server_get_by_client_key_record = 6;
    TCaptchaServerGetByServerKeyRecord captcha_server_get_by_server_key_record = 7;
    TQuotaServerGetDefaultRecord quota_server_get_default_record = 8;
    TQuotaServerGetRecord quota_server_get_record = 9;
    TQuotaServerUpdateMetricRecord quota_server_update_metric_record = 10;
    TQuotaServerBatchUpdateMetricRecord quota_server_batch_update_metric_record = 11;
    TStatsServerFolderRecord stats_server_folder_record = 12;
    TGeneralMessage general_message = 13;
    TOperationServerGetRecord operation_server_get_record = 14;
    TOperationServerListRecord operation_server_list_record = 15;
    TCaptchaServerUpdateAllRecord captcha_server_update_all_record = 16;
    TError error = 17;
}

message TLogRow {
    // The timestamp right before sending the log record to unified agent.
    uint64 timestamp = 1;
    TLogRecord record = 2;
}