syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "kernel/ugc/proto/common/digest.proto";
import "kernel/ugc/proto/common/author.proto";

package NUgc.NSchema;

message TAliceSkillReview {
    string SkillId = 1;
    uint32 Rating = 2;
    string ReviewText = 3;
    repeated string QuickAnswers = 4;

    google.protobuf.Timestamp CreatedAt = 5;
    google.protobuf.Timestamp UpdatedAt = 6;
}

// TWorkerReview enriched with additional information for publication.
message TAliceSkillReviewPub {
    // Publishable information about review author.
    TAuthor Author = 1;

    // The actual review content.
    TAliceSkillReview AliceSkillReview = 2;
}

message TAliceSkillDigest {
    // Worker Id for which the digest is created.
    string SkillId = 1;

    // Common digest data.
    TDigestCommon DigestCommon = 2;

    // A subset of reviews produced by the current request (e.g. depending on offset and page count).
    repeated TAliceSkillReviewPub Reviews = 3;

    // User's own review.
    TAliceSkillReviewPub MyReview = 4;

    string CsrfToken = 5;
}
