package NUgc;

// Token describes operations allowed to be done with database by user from external nets.
// It's encrypted into csrf-token and verified on every modifying request.
//
message TUgcdbToken {
    optional string PassportUid = 1;
    optional string YandexUid = 2;

    optional string Path = 3;         // Path allowed to be modified with this token
}
